<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#828382">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >

    <Button
        android:id="@+id/hw_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw1"
        android:background="#6e3474"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/hw_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw2"
        android:background="#6e3474"
        android:layout_margin="5dp"/>

        <Button
            android:id="@+id/hw_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hw3"
            android:background="#6e3474"
            android:layout_margin="5dp"/>

    </LinearLayout>

</ScrollView>